--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "node ./db/seeds/run-seed.js",
+    "seed": "PGDATABASE=nc_news node ./db/seeds/run-seed.js",
+    "seed-test": "PGDATABASE=nc_news_test node ./db/seeds/run-seed.js",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -28,7 +29,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "express": "^4.18.2",
+    "pg": "^8.7.3",
+    "supertest": "^6.3.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
