--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "pg": "^8.7.3",
     "supertest": "^6.3.4"
   },
