--- a/package.json
+++ b/package.json
@@ -25,18 +25,21 @@
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "pg-format": "^1.0.4"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "is-sorted": "^1.0.5",
     "pg": "^8.7.3",
     "supertest": "^6.3.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all", "jest-sorted"
     ]
   }
+ 
 }
