--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "seed": "PGDATABASE=nc_news node ./db/seeds/run-seed.js",
     "seed-test": "PGDATABASE=nc_news_test node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install",
-    "start" : "node listen.js",
+    "start": "node listen.js",
     "seed-prod": "NODE_ENV=production npm run seed"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/northcoders/be-nc-news.git"
@@ -25,7 +23,6 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
-    "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.14",
@@ -41,8 +38,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all", "jest-sorted"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
- 
 }
