--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "PGDATABASE=nc_news node ./db/seeds/run-seed.js",
-    "seed-test": "PGDATABASE=nc_news_test node ./db/seeds/run-seed.js",
+    "seed": "node ./db/seeds/run-seed.js",
+    "seed-test": "node ./db/seeds/run-seed.js",
     "test": "jest",
     "start": "node listen.js",
     "seed-prod": "NODE_ENV=production npm run seed",
-    "seed-and-test" : "jest __tests__/server.test.js && PGDATABASE=nc_news_test node ./db/seeds/run-seed.js"
+    "seed-and-test": "jest __tests__/server.test.js && PGDATABASE=nc_news_test node ./db/seeds/run-seed.js"
   },
   "repository": {
     "type": "git",
@@ -30,11 +30,11 @@
     "pg-format": "^1.0.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "is-sorted": "^1.0.5",
-    "pg": "^8.7.3",
+    "pg": "^8.11.3",
     "supertest": "^6.3.4"
   },
   "jest": {
