--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "pg-format": "^1.0.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "is-sorted": "^1.0.5",
+    "node": "^21.2.0",
     "pg": "^8.11.3",
     "supertest": "^6.3.4"
   },
