consolidate article get requests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "start": "node listen.js",
     "seed-prod": "NODE_ENV=production npm run seed",
-    "seed-and-test": "jest __tests__/server.test.js && PGDATABASE=nc_news_test node ./db/seeds/run-seed.js"
+    "seed-and-test": "PGDATABASE=nc_news_test node ./db/seeds/run-seed.js && jest __tests__/server.test.js && PGDATABASE=nc_news_test node ./db/seeds/run-seed.js"
   },
   "repository": {
     "type": "git",
